Add user register

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,13 @@
             Username: <input type="text" value="" name="username" id=""/><br>
             Password: <input type="password" value="" name="password" id=""/><br>
             <input type="submit" name="" id="" value="Login" />
-        </form>
+        </form><br><br>
+
+        New user<br>
+        <form action="register" method="post" accept-charset="utf-8">
+            Username: <input type="text" value="" name="username" id=""/><br>
+            Password: <input type="password" value="" name="password" id=""/><br>
+            <input type="submit" name="" id="" value="Register" />
+        </form><br><br>
     </body>
 </html>
